final code: fixed file not found err, multiple clients

--- a/socket_2022/images.html
+++ b/socket_2022/images.html
@@ -15,17 +15,17 @@
     <!-- Photo Grid -->
     <div class="row">
         <div class="column">
-<!--            <img src="images/pexels-quang-nguyen-vinh-4544171.jpg" style="width:100%">-->
-<!--            <img src="images/pexels-quang-nguyen-vinh-5118664.jpg" style="width:100%">-->
-            <img src="images/1.png" style="width:100%">
-            <img src="images/2.png" style="width:100%">
+            <img src="images/pexels-quang-nguyen-vinh-4544171.jpg" style="width:100%">
+            <img src="images/pexels-quang-nguyen-vinh-5118664.jpg" style="width:100%">
+<!--            <img src="images/1.png" style="width:100%">-->
+<!--            <img src="images/2.png" style="width:100%">-->
 
         </div>
         <div class="column">
-<!--            <img src="images/pexels-quang-nguyen-vinh-6136262.jpg" style="width:100%">-->
-<!--            <img src="images/pexels-quang-nguyen-vinh-6877795.jpg" style="width:100%">-->
-            <img src="images/3.png" style="width:100%">
-            <img src="images/4.png" style="width:100%">
+            <img src="images/pexels-quang-nguyen-vinh-6136262.jpg" style="width:100%">
+            <img src="images/pexels-quang-nguyen-vinh-6877795.jpg" style="width:100%">
+<!--            <img src="images/3.png" style="width:100%">-->
+<!--            <img src="images/4.png" style="width:100%">-->
         </div>
 
     </div>
